Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp
@@ -649,6 +649,7 @@ enum {
     EnterFullscreenForElementCallbackID,
     ExitFullscreenForElementCallbackID,
     AppBoundRequestContextDataForDomainCallbackID,
+    TakeViewPortSnapshotCallbackID,
     FirstUIScriptCallbackID = 100
 };
 
@@ -2169,6 +2170,23 @@ void TestRunner::setIsSpeechRecognitionPermissionGranted(bool granted)
 void TestRunner::setIsMediaKeySystemPermissionGranted(bool granted)
 {
     postSynchronousPageMessage("SetIsMediaKeySystemPermissionGranted", granted);
+}
+
+void TestRunner::takeViewPortSnapshot(JSValueRef callback)
+{
+    if (m_takeViewPortSnapshot)
+        return;
+
+    cacheTestRunnerCallback(TakeViewPortSnapshotCallbackID, callback);
+    postMessage("TakeViewPortSnapshot");
+    m_takeViewPortSnapshot = true;
+}
+
+void TestRunner::viewPortSnapshotTaken(WKStringRef value)
+{
+    auto jsValue = JSValueMakeString(mainFrameJSContext(), toJS(value).get());
+    callTestRunnerCallback(TakeViewPortSnapshotCallbackID, 1, &jsValue);
+    m_takeViewPortSnapshot = false;
 }
 
 ALLOW_DEPRECATED_DECLARATIONS_END
