Tools/WebKitTestRunner/TestController.cpp
@@ -3607,6 +3607,10 @@ void TestController::setAllowedMenuActions(const Vector<String>&)
 {
 }
 
+WKRetainPtr<WKStringRef> TestController::takeViewPortSnapshot()
+{
+    return adoptWK(WKStringCreateWithUTF8CString("not implemented"));
+}
 #endif
 
 void TestController::sendDisplayConfigurationChangedMessageForTesting()
